--- a/.env.example
+++ b/.env.example
@@ -26,9 +26,9 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=1f19d593b6e044
+MAIL_PASSWORD=35285bf78f5e30
+MAIL_ENCRYPTION=TLS
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
